webassembly-webidl/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE

Grammar

Rule 0     S' -> Definitions
Rule 1     Definitions -> ExtendedAttributeList Definition Definitions
Rule 2     Definitions -> <empty>
Rule 3     Definition -> CallbackOrInterface
Rule 4     Definition -> PartialInterface
Rule 5     Definition -> Dictionary
Rule 6     Definition -> Exception
Rule 7     Definition -> Enum
Rule 8     Definition -> Typedef
Rule 9     Definition -> ImplementsStatement
Rule 10    CallbackOrInterface -> CALLBACK CallbackRestOrInterface
Rule 11    CallbackOrInterface -> Interface
Rule 12    CallbackRestOrInterface -> CallbackRest
Rule 13    CallbackRestOrInterface -> Interface
Rule 14    Interface -> INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 15    Interface -> INTERFACE IDENTIFIER SEMICOLON
Rule 16    PartialInterface -> PARTIAL INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 17    Inheritance -> COLON ScopedName
Rule 18    Inheritance -> <empty>
Rule 19    InterfaceMembers -> ExtendedAttributeList InterfaceMember InterfaceMembers
Rule 20    InterfaceMembers -> <empty>
Rule 21    InterfaceMember -> Const
Rule 22    InterfaceMember -> AttributeOrOperation
Rule 23    Dictionary -> DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
Rule 24    DictionaryMembers -> ExtendedAttributeList DictionaryMember DictionaryMembers
Rule 25    DictionaryMembers -> <empty>
Rule 26    DictionaryMember -> Type IDENTIFIER DefaultValue SEMICOLON
Rule 27    DefaultValue -> EQUALS ConstValue
Rule 28    DefaultValue -> <empty>
Rule 29    Exception -> EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
Rule 30    Enum -> ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
Rule 31    EnumValueList -> STRING EnumValueListComma
Rule 32    EnumValueListComma -> COMMA EnumValueListString
Rule 33    EnumValueListComma -> <empty>
Rule 34    EnumValueListString -> STRING EnumValueListComma
Rule 35    EnumValueListString -> <empty>
Rule 36    CallbackRest -> IDENTIFIER EQUALS ReturnType LPAREN ArgumentList RPAREN SEMICOLON
Rule 37    ExceptionMembers -> ExtendedAttributeList ExceptionMember ExceptionMembers
Rule 38    ExceptionMembers -> <empty>
Rule 39    Typedef -> TYPEDEF Type IDENTIFIER SEMICOLON
Rule 40    ImplementsStatement -> ScopedName IMPLEMENTS ScopedName SEMICOLON
Rule 41    Const -> CONST ConstType IDENTIFIER EQUALS ConstValue SEMICOLON
Rule 42    ConstValue -> BooleanLiteral
Rule 43    ConstValue -> INTEGER
Rule 44    ConstValue -> FLOATLITERAL
Rule 45    ConstValue -> STRING
Rule 46    ConstValue -> NULL
Rule 47    BooleanLiteral -> TRUE
Rule 48    BooleanLiteral -> FALSE
Rule 49    AttributeOrOperation -> Attribute
Rule 50    AttributeOrOperation -> Operation
Rule 51    Attribute -> Qualifier AttributeRest
Rule 52    Attribute -> Inherit AttributeRest
Rule 53    AttributeRest -> ReadOnly ATTRIBUTE Type IDENTIFIER SEMICOLON
Rule 54    ReadOnly -> READONLY
Rule 55    ReadOnly -> <empty>
Rule 56    Inherit -> INHERIT
Rule 57    Inherit -> <empty>
Rule 58    Operation -> Qualifiers OperationRest
Rule 59    Operation -> STRINGIFIER SEMICOLON
Rule 60    Operation -> JSONIFIER SEMICOLON
Rule 61    Qualifier -> STATIC
Rule 62    Qualifier -> STRINGIFIER
Rule 63    Qualifiers -> Qualifier
Rule 64    Qualifiers -> Specials
Rule 65    Specials -> Special Specials
Rule 66    Specials -> <empty>
Rule 67    Special -> GETTER
Rule 68    Special -> SETTER
Rule 69    Special -> CREATOR
Rule 70    Special -> DELETER
Rule 71    Special -> LEGACYCALLER
Rule 72    OperationRest -> ReturnType OptionalIdentifier LPAREN ArgumentList RPAREN SEMICOLON
Rule 73    OptionalIdentifier -> IDENTIFIER
Rule 74    OptionalIdentifier -> <empty>
Rule 75    ArgumentList -> Argument Arguments
Rule 76    ArgumentList -> <empty>
Rule 77    Arguments -> COMMA Argument Arguments
Rule 78    Arguments -> <empty>
Rule 79    Argument -> ExtendedAttributeList Optional Type Ellipsis ArgumentName DefaultValue
Rule 80    ArgumentName -> IDENTIFIER
Rule 81    ArgumentName -> ATTRIBUTE
Rule 82    ArgumentName -> CALLBACK
Rule 83    ArgumentName -> CONST
Rule 84    ArgumentName -> CREATOR
Rule 85    ArgumentName -> DELETER
Rule 86    ArgumentName -> DICTIONARY
Rule 87    ArgumentName -> ENUM
Rule 88    ArgumentName -> EXCEPTION
Rule 89    ArgumentName -> GETTER
Rule 90    ArgumentName -> IMPLEMENTS
Rule 91    ArgumentName -> INHERIT
Rule 92    ArgumentName -> INTERFACE
Rule 93    ArgumentName -> LEGACYCALLER
Rule 94    ArgumentName -> PARTIAL
Rule 95    ArgumentName -> SERIALIZER
Rule 96    ArgumentName -> SETTER
Rule 97    ArgumentName -> STATIC
Rule 98    ArgumentName -> STRINGIFIER
Rule 99    ArgumentName -> JSONIFIER
Rule 100   ArgumentName -> TYPEDEF
Rule 101   ArgumentName -> UNRESTRICTED
Rule 102   Optional -> OPTIONAL
Rule 103   Optional -> <empty>
Rule 104   Ellipsis -> ELLIPSIS
Rule 105   Ellipsis -> <empty>
Rule 106   ExceptionMember -> Const
Rule 107   ExceptionMember -> ExceptionField
Rule 108   ExceptionField -> Type IDENTIFIER SEMICOLON
Rule 109   ExtendedAttributeList -> LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
Rule 110   ExtendedAttributeList -> <empty>
Rule 111   ExtendedAttribute -> ExtendedAttributeNoArgs
Rule 112   ExtendedAttribute -> ExtendedAttributeArgList
Rule 113   ExtendedAttribute -> ExtendedAttributeIdent
Rule 114   ExtendedAttribute -> ExtendedAttributeNamedArgList
Rule 115   ExtendedAttribute -> <empty>
Rule 116   ExtendedAttributes -> COMMA ExtendedAttribute ExtendedAttributes
Rule 117   ExtendedAttributes -> <empty>
Rule 118   Other -> INTEGER
Rule 119   Other -> FLOATLITERAL
Rule 120   Other -> IDENTIFIER
Rule 121   Other -> STRING
Rule 122   Other -> OTHER
Rule 123   Other -> ELLIPSIS
Rule 124   Other -> COLON
Rule 125   Other -> SCOPE
Rule 126   Other -> SEMICOLON
Rule 127   Other -> LT
Rule 128   Other -> EQUALS
Rule 129   Other -> GT
Rule 130   Other -> QUESTIONMARK
Rule 131   Other -> DATE
Rule 132   Other -> DOMSTRING
Rule 133   Other -> BYTESTRING
Rule 134   Other -> ANY
Rule 135   Other -> ATTRIBUTE
Rule 136   Other -> BOOLEAN
Rule 137   Other -> BYTE
Rule 138   Other -> LEGACYCALLER
Rule 139   Other -> CONST
Rule 140   Other -> CREATOR
Rule 141   Other -> DELETER
Rule 142   Other -> DOUBLE
Rule 143   Other -> EXCEPTION
Rule 144   Other -> FALSE
Rule 145   Other -> FLOAT
Rule 146   Other -> GETTER
Rule 147   Other -> IMPLEMENTS
Rule 148   Other -> INHERIT
Rule 149   Other -> INTERFACE
Rule 150   Other -> LONG
Rule 151   Other -> MODULE
Rule 152   Other -> NULL
Rule 153   Other -> OBJECT
Rule 154   Other -> OCTET
Rule 155   Other -> OPTIONAL
Rule 156   Other -> SEQUENCE
Rule 157   Other -> SETTER
Rule 158   Other -> SHORT
Rule 159   Other -> STATIC
Rule 160   Other -> STRINGIFIER
Rule 161   Other -> JSONIFIER
Rule 162   Other -> TRUE
Rule 163   Other -> TYPEDEF
Rule 164   Other -> UNSIGNED
Rule 165   Other -> VOID
Rule 166   OtherOrComma -> Other
Rule 167   OtherOrComma -> COMMA
Rule 168   Type -> SingleType
Rule 169   Type -> UnionType TypeSuffix
Rule 170   SingleType -> NonAnyType
Rule 171   SingleType -> ANY TypeSuffixStartingWithArray
Rule 172   UnionType -> LPAREN UnionMemberType OR UnionMemberType UnionMemberTypes RPAREN
Rule 173   UnionMemberType -> NonAnyType
Rule 174   UnionMemberTypeArrayOfAny -> ANY LBRACKET RBRACKET
Rule 175   UnionMemberType -> UnionType TypeSuffix
Rule 176   UnionMemberType -> UnionMemberTypeArrayOfAny TypeSuffix
Rule 177   UnionMemberTypes -> OR UnionMemberType UnionMemberTypes
Rule 178   UnionMemberTypes -> <empty>
Rule 179   NonAnyType -> PrimitiveOrStringType TypeSuffix
Rule 180   NonAnyType -> ARRAYBUFFER TypeSuffix
Rule 181   NonAnyType -> OBJECT TypeSuffix
Rule 182   NonAnyType -> SEQUENCE LT Type GT Null
Rule 183   NonAnyType -> ScopedName TypeSuffix
Rule 184   NonAnyType -> DATE TypeSuffix
Rule 185   ConstType -> PrimitiveOrStringType Null
Rule 186   ConstType -> IDENTIFIER Null
Rule 187   PrimitiveOrStringType -> UnsignedIntegerType
Rule 188   PrimitiveOrStringType -> BOOLEAN
Rule 189   PrimitiveOrStringType -> BYTE
Rule 190   PrimitiveOrStringType -> OCTET
Rule 191   PrimitiveOrStringType -> FLOAT
Rule 192   PrimitiveOrStringType -> UNRESTRICTED FLOAT
Rule 193   PrimitiveOrStringType -> DOUBLE
Rule 194   PrimitiveOrStringType -> UNRESTRICTED DOUBLE
Rule 195   PrimitiveOrStringType -> DOMSTRING
Rule 196   PrimitiveOrStringType -> BYTESTRING
Rule 197   UnsignedIntegerType -> UNSIGNED IntegerType
Rule 198   UnsignedIntegerType -> IntegerType
Rule 199   IntegerType -> SHORT
Rule 200   IntegerType -> LONG OptionalLong
Rule 201   OptionalLong -> LONG
Rule 202   OptionalLong -> <empty>
Rule 203   TypeSuffix -> LBRACKET RBRACKET TypeSuffix
Rule 204   TypeSuffix -> QUESTIONMARK TypeSuffixStartingWithArray
Rule 205   TypeSuffix -> <empty>
Rule 206   TypeSuffixStartingWithArray -> LBRACKET RBRACKET TypeSuffix
Rule 207   TypeSuffixStartingWithArray -> <empty>
Rule 208   Null -> QUESTIONMARK
Rule 209   Null -> <empty>
Rule 210   ReturnType -> Type
Rule 211   ReturnType -> VOID
Rule 212   ScopedName -> AbsoluteScopedName
Rule 213   ScopedName -> RelativeScopedName
Rule 214   AbsoluteScopedName -> SCOPE IDENTIFIER ScopedNameParts
Rule 215   RelativeScopedName -> IDENTIFIER ScopedNameParts
Rule 216   ScopedNameParts -> SCOPE IDENTIFIER ScopedNameParts
Rule 217   ScopedNameParts -> <empty>
Rule 218   ExtendedAttributeNoArgs -> IDENTIFIER
Rule 219   ExtendedAttributeArgList -> IDENTIFIER LPAREN ArgumentList RPAREN
Rule 220   ExtendedAttributeIdent -> IDENTIFIER EQUALS STRING
Rule 221   ExtendedAttributeIdent -> IDENTIFIER EQUALS IDENTIFIER
Rule 222   ExtendedAttributeNamedArgList -> IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN

Terminals, with rules where they appear

ANY                  : 134 171 174
ARRAYBUFFER          : 180
ATTRIBUTE            : 53 81 135
BOOLEAN              : 136 188
BYTE                 : 137 189
BYTESTRING           : 133 196
CALLBACK             : 10 82
COLON                : 17 124
COMMA                : 32 77 116 167
CONST                : 41 83 139
CREATOR              : 69 84 140
DATE                 : 131 184
DELETER              : 70 85 141
DICTIONARY           : 23 86
DOMSTRING            : 132 195
DOUBLE               : 142 193 194
ELLIPSIS             : 104 123
ENUM                 : 30 87
EQUALS               : 27 36 41 128 220 221 222
EXCEPTION            : 29 88 143
FALSE                : 48 144
FLOAT                : 145 191 192
FLOATLITERAL         : 44 119
GETTER               : 67 89 146
GT                   : 129 182
IDENTIFIER           : 14 15 16 23 26 29 30 36 39 41 53 73 80 108 120 186 214 215 216 218 219 220 221 221 222 222
IMPLEMENTS           : 40 90 147
INHERIT              : 56 91 148
INTEGER              : 43 118
INTERFACE            : 14 15 16 92 149
JSONIFIER            : 60 99 161
LBRACE               : 14 16 23 29 30
LBRACKET             : 109 174 203 206
LEGACYCALLER         : 71 93 138
LONG                 : 150 200 201
LPAREN               : 36 72 172 219 222
LT                   : 127 182
MODULE               : 151
NULL                 : 46 152
OBJECT               : 153 181
OCTET                : 154 190
OPTIONAL             : 102 155
OR                   : 172 177
OTHER                : 122
PARTIAL              : 16 94
QUESTIONMARK         : 130 204 208
RBRACE               : 14 16 23 29 30
RBRACKET             : 109 174 203 206
READONLY             : 54
RPAREN               : 36 72 172 219 222
SCOPE                : 125 214 216
SEMICOLON            : 14 15 16 23 26 29 30 36 39 40 41 53 59 60 72 108 126
SEQUENCE             : 156 182
SERIALIZER           : 95
SETTER               : 68 96 157
SHORT                : 158 199
STATIC               : 61 97 159
STRING               : 31 34 45 121 220
STRINGIFIER          : 59 62 98 160
TRUE                 : 47 162
TYPEDEF              : 39 100 163
UNRESTRICTED         : 101 192 194
UNSIGNED             : 164 197
VOID                 : 165 211
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

AbsoluteScopedName   : 212
Argument             : 75 77
ArgumentList         : 36 72 219 222
ArgumentName         : 79
Arguments            : 75 77
Attribute            : 49
AttributeOrOperation : 22
AttributeRest        : 51 52
BooleanLiteral       : 42
CallbackOrInterface  : 3
CallbackRest         : 12
CallbackRestOrInterface : 10
Const                : 21 106
ConstType            : 41
ConstValue           : 27 41
DefaultValue         : 26 79
Definition           : 1
Definitions          : 1 0
Dictionary           : 5
DictionaryMember     : 24
DictionaryMembers    : 23 24
Ellipsis             : 79
Enum                 : 7
EnumValueList        : 30
EnumValueListComma   : 31 34
EnumValueListString  : 32
Exception            : 6
ExceptionField       : 107
ExceptionMember      : 37
ExceptionMembers     : 29 37
ExtendedAttribute    : 109 116
ExtendedAttributeArgList : 112
ExtendedAttributeIdent : 113
ExtendedAttributeList : 1 19 24 37 79
ExtendedAttributeNamedArgList : 114
ExtendedAttributeNoArgs : 111
ExtendedAttributes   : 109 116
ImplementsStatement  : 9
Inherit              : 52
Inheritance          : 14 23 29
IntegerType          : 197 198
Interface            : 11 13
InterfaceMember      : 19
InterfaceMembers     : 14 16 19
NonAnyType           : 170 173
Null                 : 182 185 186
Operation            : 50
OperationRest        : 58
Optional             : 79
OptionalIdentifier   : 72
OptionalLong         : 200
Other                : 166
OtherOrComma         : 
PartialInterface     : 4
PrimitiveOrStringType : 179 185
Qualifier            : 51 63
Qualifiers           : 58
ReadOnly             : 53
RelativeScopedName   : 213
ReturnType           : 36 72
ScopedName           : 17 40 40 183
ScopedNameParts      : 214 215 216
SingleType           : 168
Special              : 65
Specials             : 64 65
Type                 : 26 39 53 79 108 182 210
TypeSuffix           : 169 175 176 179 180 181 183 184 203 206
TypeSuffixStartingWithArray : 171 204
Typedef              : 8
UnionMemberType      : 172 172 177
UnionMemberTypeArrayOfAny : 176
UnionMemberTypes     : 172 177
UnionType            : 169 175
UnsignedIntegerType  : 187

Parsing method: LALR

state 0

    (0) S' -> . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (109) ExtendedAttributeList -> . LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
    (110) ExtendedAttributeList -> .

    $end            reduce using rule 2 (Definitions -> .)
    LBRACKET        shift and go to state 3
    CALLBACK        reduce using rule 110 (ExtendedAttributeList -> .)
    PARTIAL         reduce using rule 110 (ExtendedAttributeList -> .)
    DICTIONARY      reduce using rule 110 (ExtendedAttributeList -> .)
    EXCEPTION       reduce using rule 110 (ExtendedAttributeList -> .)
    ENUM            reduce using rule 110 (ExtendedAttributeList -> .)
    TYPEDEF         reduce using rule 110 (ExtendedAttributeList -> .)
    INTERFACE       reduce using rule 110 (ExtendedAttributeList -> .)
    SCOPE           reduce using rule 110 (ExtendedAttributeList -> .)
    IDENTIFIER      reduce using rule 110 (ExtendedAttributeList -> .)

    Definitions                    shift and go to state 1
    ExtendedAttributeList          shift and go to state 2

state 1

    (0) S' -> Definitions .



state 2

    (1) Definitions -> ExtendedAttributeList . Definition Definitions
    (3) Definition -> . CallbackOrInterface
    (4) Definition -> . PartialInterface
    (5) Definition -> . Dictionary
    (6) Definition -> . Exception
    (7) Definition -> . Enum
    (8) Definition -> . Typedef
    (9) Definition -> . ImplementsStatement
    (10) CallbackOrInterface -> . CALLBACK CallbackRestOrInterface
    (11) CallbackOrInterface -> . Interface
    (16) PartialInterface -> . PARTIAL INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
    (23) Dictionary -> . DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
    (29) Exception -> . EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
    (30) Enum -> . ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
    (39) Typedef -> . TYPEDEF Type IDENTIFIER SEMICOLON
    (40) ImplementsStatement -> . ScopedName IMPLEMENTS ScopedName SEMICOLON
    (14) Interface -> . INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
    (15) Interface -> . INTERFACE IDENTIFIER SEMICOLON
    (212) ScopedName -> . AbsoluteScopedName
    (213) ScopedName -> . RelativeScopedName
    (214) AbsoluteScopedName -> . SCOPE IDENTIFIER ScopedNameParts
    (215) RelativeScopedName -> . IDENTIFIER ScopedNameParts

    CALLBACK        shift and go to state 12
    PARTIAL         shift and go to state 14
    DICTIONARY      shift and go to state 17
    EXCEPTION       shift and go to state 18
    ENUM            shift and go to state 19
    TYPEDEF         shift and go to state 20
    INTERFACE       shift and go to state 15
    SCOPE           shift and go to state 24
    IDENTIFIER      shift and go to state 16

    Definition                     shift and go to state 4
    CallbackOrInterface            shift and go to state 5
    PartialInterface               shift and go to state 6
    Dictionary                     shift and go to state 7
    Exception                      shift and go to state 8
    Enum                           shift and go to state 9
    Typedef                        shift and go to state 10
    ImplementsStatement            shift and go to state 11
    Interface                      shift and go to state 13
    ScopedName                     shift and go to state 21
    AbsoluteScopedName             shift and go to state 22
    RelativeScopedName             shift and go to state 23

state 3

    (109) ExtendedAttributeList -> LBRACKET . ExtendedAttribute ExtendedAttributes RBRACKET
    (111) ExtendedAttribute -> . ExtendedAttributeNoArgs
    (112) ExtendedAttribute -> . ExtendedAttributeArgList
    (113) ExtendedAttribute -> . ExtendedAttributeIdent
    (114) ExtendedAttribute -> . ExtendedAttributeNamedArgList
    (115) ExtendedAttribute -> .
    (218) ExtendedAttributeNoArgs -> . IDENTIFIER
    (219) ExtendedAttributeArgList -> . IDENTIFIER LPAREN ArgumentList RPAREN
    (220) ExtendedAttributeIdent -> . IDENTIFIER EQUALS STRING
    (221) ExtendedAttributeIdent -> . IDENTIFIER EQUALS IDENTIFIER
    (222) ExtendedAttributeNamedArgList -> . IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN

    COMMA           reduce using rule 115 (ExtendedAttribute -> .)
    RBRACKET        reduce using rule 115 (ExtendedAttribute -> .)
    IDENTIFIER      shift and go to state 30

    ExtendedAttribute              shift and go to state 25
    ExtendedAttributeNoArgs        shift and go to state 26
    ExtendedAttributeArgList       shift and go to state 27
    ExtendedAttributeIdent         shift and go to state 28
    ExtendedAttributeNamedArgList  shift and go to state 29

state 4

    (1) Definitions -> ExtendedAttributeList Definition . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (109) ExtendedAttributeList -> . LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
    (110) ExtendedAttributeList -> .

    $end            reduce using rule 2 (Definitions -> .)
    LBRACKET        shift and go to state 3
    CALLBACK        reduce using rule 110 (ExtendedAttributeList -> .)
    PARTIAL         reduce using rule 110 (ExtendedAttributeList -> .)
    DICTIONARY      reduce using rule 110 (ExtendedAttributeList -> .)
    EXCEPTION       reduce using rule 110 (ExtendedAttributeList -> .)
    ENUM            reduce using rule 110 (ExtendedAttributeList -> .)
    TYPEDEF         reduce using rule 110 (ExtendedAttributeList -> .)
    INTERFACE       reduce using rule 110 (ExtendedAttributeList -> .)
    SCOPE           reduce using rule 110 (ExtendedAttributeList -> .)
    IDENTIFIER      reduce using rule 110 (ExtendedAttributeList -> .)

    ExtendedAttributeList          shift and go to state 2
    Definitions                    shift and go to state 31

state 5

    (3) Definition -> CallbackOrInterface .

    LBRACKET        reduce using rule 3 (Definition -> CallbackOrInterface .)
    CALLBACK        reduce using rule 3 (Definition -> CallbackOrInterface .)
    PARTIAL         reduce using rule 3 (Definition -> CallbackOrInterface .)
    DICTIONARY      reduce using rule 3 (Definition -> CallbackOrInterface .)
    EXCEPTION       reduce using rule 3 (Definition -> CallbackOrInterface .)
    ENUM            reduce using rule 3 (Definition -> CallbackOrInterface .)
    TYPEDEF         reduce using rule 3 (Definition -> CallbackOrInterface .)
    INTERFACE       reduce using rule 3 (Definition -> CallbackOrInterface .)
    SCOPE           reduce using rule 3 (Definition -> CallbackOrInterface .)
    IDENTIFIER      reduce using rule 3 (Definition -> CallbackOrInterface .)
    $end            reduce using rule 3 (Definition -> CallbackOrInterface .)


state 6

    (4) Definition -> PartialInterface .

    LBRACKET        reduce using rule 4 (Definition -> PartialInterface .)
    CALLBACK        reduce using rule 4 (Definition -> PartialInterface .)
    PARTIAL         reduce using rule 4 (Definition -> PartialInterface .)
    DICTIONARY      reduce using rule 4 (Definition -> PartialInterface .)
    EXCEPTION       reduce using rule 4 (Definition -> PartialInterface .)
    ENUM            reduce using rule 4 (Definition -> PartialInterface .)
    TYPEDEF         reduce using rule 4 (Definition -> PartialInterface .)
    INTERFACE       reduce using rule 4 (Definition -> PartialInterface .)
    SCOPE           reduce using rule 4 (Definition -> PartialInterface .)
    IDENTIFIER      reduce using rule 4 (Definition -> PartialInterface .)
    $end            reduce using rule 4 (Definition -> PartialInterface .)


state 7

    (5) Definition -> Dictionary .

    LBRACKET        reduce using rule 5 (Definition -> Dictionary .)
    CALLBACK        reduce using rule 5 (Definition -> Dictionary .)
    PARTIAL         reduce using rule 5 (Definition -> Dictionary .)
    DICTIONARY      reduce using rule 5 (Definition -> Dictionary .)
    EXCEPTION       reduce using rule 5 (Definition -> Dictionary .)
    ENUM            reduce using rule 5 (Definition -> Dictionary .)
    TYPEDEF         reduce using rule 5 (Definition -> Dictionary .)
    INTERFACE       reduce using rule 5 (Definition -> Dictionary .)
    SCOPE           reduce using rule 5 (Definition -> Dictionary .)
    IDENTIFIER      reduce using rule 5 (Definition -> Dictionary .)
    $end            reduce using rule 5 (Definition -> Dictionary .)


state 8

    (6) Definition -> Exception .

    LBRACKET        reduce using rule 6 (Definition -> Exception .)
    CALLBACK        reduce using rule 6 (Definition -> Exception .)
    PARTIAL         reduce using rule 6 (Definition -> Exception .)
    DICTIONARY      reduce using rule 6 (Definition -> Exception .)
    EXCEPTION       reduce using rule 6 (Definition -> Exception .)
    ENUM            reduce using rule 6 (Definition -> Exception .)
    TYPEDEF         reduce using rule 6 (Definition -> Exception .)
    INTERFACE       reduce using rule 6 (Definition -> Exception .)
    SCOPE           reduce using rule 6 (Definition -> Exception .)
    IDENTIFIER      reduce using rule 6 (Definition -> Exception .)
    $end            reduce using rule 6 (Definition -> Exception .)


state 9

    (7) Definition -> Enum .

    LBRACKET        reduce using rule 7 (Definition -> Enum .)
    CALLBACK        reduce using rule 7 (Definition -> Enum .)
    PARTIAL         reduce using rule 7 (Definition -> Enum .)
    DICTIONARY      reduce using rule 7 (Definition -> Enum .)
    EXCEPTION       reduce using rule 7 (Definition -> Enum .)
    ENUM            reduce using rule 7 (Definition -> Enum .)
    TYPEDEF         reduce using rule 7 (Definition -> Enum .)
    INTERFACE       reduce using rule 7 (Definition -> Enum .)
    SCOPE           reduce using rule 7 (Definition -> Enum .)
    IDENTIFIER      reduce using rule 7 (Definition -> Enum .)
    $end            reduce using rule 7 (Definition -> Enum .)


state 10

    (8) Definition -> Typedef .

    LBRACKET        reduce using rule 8 (Definition -> Typedef .)
    CALLBACK        reduce using rule 8 (Definition -> Typedef .)
    PARTIAL         reduce using rule 8 (Definition -> Typedef .)
    DICTIONARY      reduce using rule 8 (Definition -> Typedef .)
    EXCEPTION       reduce using rule 8 (Definition -> Typedef .)
    ENUM            reduce using rule 8 (Definition -> Typedef .)
    TYPEDEF         reduce using rule 8 (Definition -> Typedef .)
    INTERFACE       reduce using rule 8 (Definition -> Typedef .)
    SCOPE           reduce using rule 8 (Definition -> Typedef .)
    IDENTIFIER      reduce using rule 8 (Definition -> Typedef .)
    $end            reduce using rule 8 (Definition -> Typedef .)


state 11

    (9) Definition -> ImplementsStatement .

    LBRACKET        reduce using rule 9 (Definition -> ImplementsStatement .)
    CALLBACK        reduce using rule 9 (Definition -> ImplementsStatement .)
    PARTIAL         reduce using rule 9 (Definition -> ImplementsStatement .)
    DICTIONARY      reduce using rule 9 (Definition -> ImplementsStatement .)
    EXCEPTION       reduce using rule 9 (Definition -> ImplementsStatement .)
    ENUM            reduce using rule 9 (Definition -> ImplementsStatement .)
    TYPEDEF         reduce using rule 9 (Definition -> ImplementsStatement .)
    INTERFACE       reduce using rule 9 (Definition -> ImplementsStatement .)
    SCOPE           reduce using rule 9 (Definition -> ImplementsStatement .)
    IDENTIFIER      reduce using rule 9 (Definition -> ImplementsStatement .)
    $end            reduce using rule 9 (Definition -> ImplementsStatement .)


state 12

    (10) CallbackOrInterface -> CALLBACK . CallbackRestOrInterface
    (12) CallbackRestOrInterface -> . CallbackRest
    (13) CallbackRestOrInterface -> . Interface
    (36) CallbackRest -> . IDENTIFIER EQUALS ReturnType LPAREN ArgumentList RPAREN SEMICOLON
    (14) Interface -> . INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
    (15) Interface -> . INTERFACE IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 35
    INTERFACE       shift and go to state 15

    CallbackRestOrInterface        shift and go to state 32
    CallbackRest                   shift and go to state 33
    Interface                      shift and go to state 34

state 13

    (11) CallbackOrInterface -> Interface .

    LBRACKET        reduce using rule 11 (CallbackOrInterface -> Interface .)
    CALLBACK        reduce using rule 11 (CallbackOrInterface -> Interface .)
    PARTIAL         reduce using rule 11 (CallbackOrInterface -> Interface .)
    DICTIONARY      reduce using rule 11 (CallbackOrInterface -> Interface .)
    EXCEPTION       reduce using rule 11 (CallbackOrInterface -> Interface .)
    ENUM            reduce using rule 11 (CallbackOrInterface -> Interface .)
    TYPEDEF         reduce using rule 11 (CallbackOrInterface -> Interface .)
    INTERFACE       reduce using rule 11 (CallbackOrInterface -> Interface .)
    SCOPE           reduce using rule 11 (CallbackOrInterface -> Interface .)
    IDENTIFIER      reduce using rule 11 (CallbackOrInterface -> Interface .)
    $end            reduce using rule 11 (CallbackOrInterface -> Interface .)


state 14

    (16) PartialInterface -> PARTIAL . INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON

    INTERFACE       shift and go to state 36


state 15

    (14) Interface -> INTERFACE . IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
    (15) Interface -> INTERFACE . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 37


state 16

    (215) RelativeScopedName -> IDENTIFIER . ScopedNameParts
    (216) ScopedNameParts -> . SCOPE IDENTIFIER ScopedNameParts
    (217) ScopedNameParts -> .

    SCOPE           shift and go to state 39
    IMPLEMENTS      reduce using rule 217 (ScopedNameParts -> .)
    LBRACKET        reduce using rule 217 (ScopedNameParts -> .)
    QUESTIONMARK    reduce using rule 217 (ScopedNameParts -> .)
    IDENTIFIER      reduce using rule 217 (ScopedNameParts -> .)
    OR              reduce using rule 217 (ScopedNameParts -> .)
    SEMICOLON       reduce using rule 217 (ScopedNameParts -> .)
    LPAREN          reduce using rule 217 (ScopedNameParts -> .)
    LBRACE          reduce using rule 217 (ScopedNameParts -> .)
    GT              reduce using rule 217 (ScopedNameParts -> .)
    RPAREN          reduce using rule 217 (ScopedNameParts -> .)
    ELLIPSIS        reduce using rule 217 (ScopedNameParts -> .)
    ATTRIBUTE       reduce using rule 217 (ScopedNameParts -> .)
    CALLBACK        reduce using rule 217 (ScopedNameParts -> .)
    CONST           reduce using rule 217 (ScopedNameParts -> .)
    CREATOR         reduce using rule 217 (ScopedNameParts -> .)
    DELETER         reduce using rule 217 (ScopedNameParts -> .)
    DICTIONARY      reduce using rule 217 (ScopedNameParts -> .)
    ENUM            reduce using rule 217 (ScopedNameParts -> .)
    EXCEPTION       reduce using rule 217 (ScopedNameParts -> .)
    GETTER          reduce using rule 217 (ScopedNameParts -> .)
    INHERIT         reduce using rule 217 (ScopedNameParts -> .)
    INTERFACE       reduce using rule 217 (ScopedNameParts -> .)
    LEGACYCALLER    reduce using rule 217 (ScopedNameParts -> .)
    PARTIAL         reduce using rule 217 (ScopedNameParts -> .)
    SERIALIZER      reduce using rule 217 (ScopedNameParts -> .)
    SETTER          reduce using rule 217 (ScopedNameParts -> .)
    STATIC          reduce using rule 217 (ScopedNameParts -> .)
    STRINGIFIER     reduce using rule 217 (ScopedNameParts -> .)
    JSONIFIER       reduce using rule 217 (ScopedNameParts -> .)
    TYPEDEF         reduce using rule 217 (ScopedNameParts -> .)
    UNRESTRICTED    reduce using rule 217 (ScopedNameParts -> .)

    ScopedNameParts                shift and go to state 38

state 17

    (23) Dictionary -> DICTIONARY . IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON

    IDENTIFIER      shift and go to state 40


state 18

    (29) Exception -> EXCEPTION . IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON

    IDENTIFIER      shift and go to state 41

